objects/ScCollection_Reference_Infomation__c.object
<CustomObject>
    <fields>
        <fullName>ScCollection_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Reference Infomations</relationshipLabel>
        <relationshipName>Reference_Infomations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ScCollection_Business_Partner_Id__c</fullName>
        <label>Business Partner Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScCollection_City_Code__c</fullName>
        <label>City Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScCollection_City_Name__c</fullName>
        <label>City Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScCollection_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Reference Infomations(Contact)</relationshipLabel>
        <relationshipName>Reference_Infomations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ScCollection_Direct_Bus_Landline__c</fullName>
        <label>Direct Bus Landline</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ScCollection_Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ScCollection_Fax__c</fullName>
        <label>Fax</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScCollection_First_Name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScCollection_Home_Phone__c</fullName>
        <label>Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ScCollection_Last_Name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScCollection_Middle_Name__c</fullName>
        <label>Middle Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScCollection_Mobile_Others__c</fullName>
        <label>Mobile - Others</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ScCollection_Mobile_Personal__c</fullName>
        <label>Mobile - Personal</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ScCollection_Mobile_Work__c</fullName>
        <label>Mobile - Work</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ScCollection_Ref_Id__c</fullName>
        <externalId>true</externalId>
        <label>Ref Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScCollection_Street_Number__c</fullName>
        <label>Street Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScCollection_Work_Phone__c</fullName>
        <label>Work Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Sccollection_Main_Bus_Phone__c</fullName>
        <label>Main Bus Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Sccollection_Post_Code__c</fullName>
        <label>Post Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sccollection_State_Code__c</fullName>
        <label>State Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sccollection_Street_Name__c</fullName>
        <label>Street Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sccollection_Street_type__c</fullName>
        <label>Street type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sccollection_Unit_Number__c</fullName>
        <label>Unit Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Reference Infomation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ScCollection_Account__c</columns>
        <columns>ScCollection_Contact__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RI-{0000000}</displayFormat>
        <label>Reference Infomation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reference Infomations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>